--- a/src/pug/ui/icons.pug
+++ b/src/pug/ui/icons.pug
@@ -24,11 +24,11 @@ html(lang="ru")
 				.container-dashboard__content
 					ul
 						li
-							svg.svg-close
-								use()
+							svg.svg-plus
+								use(href="../img/spriteSvg.svg#svg-plus")
 							pre.
-								svg.svg-close
-									use()
+								svg.svg-plus
+									use(href="./img/spriteSvg.svg#svg-plus")
 								
 					
 					
