--- a/src/scss/base/_var.scss
+++ b/src/scss/base/_var.scss
@@ -17,6 +17,6 @@ $pr1: #212D64;
 
 
 $reg: 'Manrope-Regular';
-$med: 'Roboto Medium';
+$medi: 'Roboto Medium';
 $semi: 'Manrope-SemiBold';
 $bold: 'Manrope-Bold';
