--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -20,10 +20,14 @@ html,
 body {
 	margin: 0;
 	padding: 0;
-	color: $text;
+	color: $pr;
 	font-family: $reg;
 	font-size: 16px;
+	line-height: 130%;
 	-webkit-font-smoothing: antialiased;
+	@media (max-width: 767px) {
+	  line-height: 1.4;
+	}
 }
 
 a,
