--- a/src/pug/ui/buttons.pug
+++ b/src/pug/ui/buttons.pug
@@ -114,3 +114,21 @@ html(lang="ru")
 									span Текст на кнопке
 									svg.svg-plus
 										use(href="../img/spriteSvg.svg#svg-plus")
+
+						li
+							.btn-left
+								svg.chevron-left
+									use(href="../img/spriteSvg.svg#chevron-left")
+							pre.
+								.btn-left
+									svg.chevron-left
+										use(href="../img/spriteSvg.svg#chevron-left")
+
+						li
+							.btn-right
+								svg.chevron-right
+									use(href="../img/spriteSvg.svg#chevron-right")
+							pre.
+								.btn-right
+									svg.chevron-right
+										use(href="../img/spriteSvg.svg#chevron-right")
