--- a/src/pug/ui/typography.pug
+++ b/src/pug/ui/typography.pug
@@ -64,4 +64,19 @@ html(lang="ru")
 							.h3  Заголовок третьего уровня
 						pre.
 							.h3 Заголовок третьего уровня
+					
+					
+					ul
+						li
+							a(href="#!").link Политика обработки персональных данных
+						pre.
+							a(href="#!").link Политика обработки персональных данных
+						li
+							a(href="#!").link-medium Политика обработки персональных данных
+						pre.
+							a(href="#!").link-medium Политика обработки персональных данных
+						li
+							a(href="#!").link-small Политика обработки персональных данных
+						pre.
+							a(href="#!").link-small Политика обработки персональных данных
 			
