--- a/src/pug/ui/icons.pug
+++ b/src/pug/ui/icons.pug
@@ -31,4 +31,16 @@ html(lang="ru")
 									use(href="./img/spriteSvg.svg#svg-plus")
 								
 					
-					
+						li
+							svg.chevron-left
+								use(href="../img/spriteSvg.svg#chevron-left")
+							pre.
+								svg.chevron-left
+									use(href="./img/spriteSvg.svg#chevron-left")
+
+						li
+							svg.chevron-right
+								use(href="../img/spriteSvg.svg#chevron-right")
+							pre.
+								svg.chevron-right
+									use(href="./img/spriteSvg.svg#chevron-right")
