--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,8 @@
 @import "base/_icons.scss";
 @import "blocks/_form.scss";
 @import "blocks/_buttons.scss";
+@import "blocks/_pagination.scss";
+@import "blocks/_components.scss";
 
 
 //blocks
