--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -65,8 +65,46 @@ html(lang="ru")
 								a(href="#!").pagination-next
 									svg.svg-next
 										use(href="../img/spriteSvg.svg#chevron-right")
-
+						
 						li
 							.tag
 								span 05
-								span.icon-cross
+								span
+									svg.svg-cross
+										use(href="../img/spriteSvg.svg#svg-cross")
+							pre.
+								.tag
+									span 05
+									span
+										svg.svg-cross
+											use(href="../img/spriteSvg.svg#svg-cross")
+
+							.tag.active
+								span 05
+								span
+									svg.svg-cross
+										use(href="../img/spriteSvg.svg#svg-cross")
+							pre.
+								.tag.active
+									span 05
+									span
+										svg.svg-cross
+											use(href="../img/spriteSvg.svg#svg-cross")
+
+						li
+							.tag-wrapper.flx-block
+								.tag
+									span 05
+									span
+										svg.svg-cross
+											use(href="../img/spriteSvg.svg#svg-cross")
+								.tag.active
+									span 05
+									span
+										svg.svg-cross
+											use(href="../img/spriteSvg.svg#svg-cross")
+								.tag
+									span 05
+									span
+										svg.svg-cross
+											use(href="../img/spriteSvg.svg#svg-cross")
