--- a/src/scss/ui/_ui-navigation.scss
+++ b/src/scss/ui/_ui-navigation.scss
@@ -44,6 +44,7 @@
 		font-family: sans-serif;
 		}
 }
+.ui-components li+li{margin-top: 25px;}
 .body-dashboard{
 	padding-left: 320px;
 	padding-top: 50px;
