--- a/src/pug/ui/forms.pug
+++ b/src/pug/ui/forms.pug
@@ -12,7 +12,36 @@ html(lang="ru")
 		meta(name="format-detection" content="telephone=no")
 		link(rel="stylesheet", href="../css/main.css")
 		title UI-KIT
+		style.
+			@font-face {
+				font-family: "Manrope-Regular";
+				src: url(../fonts/Manrope-Regular.woff2) format("woff2");
+				font-weight: 400;
+				font-style: normal;
+				font-display: swap;
+			}
+			@font-face {
+				font-family: "Manrope-Medium";
+				src: url(../fonts/Manrope-Medium.woff2) format("woff2");
+				font-weight: 500;
+				font-style: normal;
+				font-display: swap;
+			}
 
+			@font-face {
+				font-family: "Manrope-SemiBold";
+				src: url(../fonts/Manrope-SemiBold.woff2) format("woff2");
+				font-weight: 600;
+				font-style: normal;
+				font-display: swap;
+			}
+			@font-face {
+				font-family: "Manrope-Bold";
+				src: url(../fonts/Manrope-Bold.woff2) format("woff2");
+				font-weight: 700;
+				font-style: normal;
+				font-display: swap;
+			}
 	body.body-dashboard
 
 		include ui-navigation.pug
@@ -22,4 +51,18 @@ html(lang="ru")
 				h2 Форма
 
 				.container-dashboard__content
+					ul
+						li
+							+input('Описание поля', 'Дополнительная текстовая инфа')
+							.p-20
+							+input('Ваше имя', 'Обязательно для заполнения')
+							.p-20
+							+input('Ваше имя', 'Обязательно для заполнения', 'error')
+							
+							pre.
+								+input('Описание поля', 'Дополнительная текстовая инфа')
+								.form-item
+									input.error(type="text" name="name" required)
+									span.fake-placeholder Описание поля
+									p Дополнительная текстовая инфа
 					
