--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -11,3 +11,44 @@ select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0px 1000px #fff inset;
    box-shadow: 0 0 0px 1000px #fff inset;
 }
+.form-item{
+  position: relative;
+  .fake-placeholder{
+    position: absolute;
+    left: 16px;
+    top:17px;
+    color: $sec1;
+    font-size: 16px;
+    transition:.3s;
+    pointer-events: none;
+  }
+  p{
+    font-size: 12px;
+    color: $sec1;
+    line-height: 1.4;
+    padding-left: 15px;
+    &.error{color: $er;}
+  }
+}
+input{
+  display: block;
+  width: 100%;
+  height: 54px;
+  font-size: 16px;
+  color: $pr1;
+  border-radius: 12px;
+  border: 1px solid $sec2;
+  background:white;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 17px;
+}
+input.error{border: 1px solid $er;}
+input.error ~ p {
+ color: $er;
+}
+input:valid, input:focus{border: 1px solid $sec1;}
+
+input:focus + .fake-placeholder, input:valid+.fake-placeholder{
+  top: 4px; font-size: 12px;
+}
