--- a/src/scss/ui/_ui-navigation.scss
+++ b/src/scss/ui/_ui-navigation.scss
@@ -48,6 +48,7 @@
 .body-dashboard{
 	padding-left: 320px;
 	padding-top: 50px;
+	.p-20{padding: 20px 0;}
 	.modal-frame{
 		transform: translate(0)!important;
 		position: relative !important;
