--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -58,4 +58,5 @@ html(lang="ru")
 				
 		//=============== мои скрипты ===================
 		
+		script(src="./js/form.js")
 		script(src="./js/main.js")
