--- a/src/pug/ui/forms.pug
+++ b/src/pug/ui/forms.pug
@@ -53,16 +53,28 @@ html(lang="ru")
 				.container-dashboard__content
 					ul
 						li
-							+input('Описание поля', 'Дополнительная текстовая инфа')
-							.p-20
-							+input('Ваше имя', 'Обязательно для заполнения')
+							
+							+input('Ваше имя', 'Обязательно для заполнения','')
+							.p-10
+							p Если инпут в фокусе, скрипт добавляет ему класс "valid". Плэйсхолдер у инпута не дефолтный, а сделан через спан с классом fake-placeholder. Реализовано так, что бы по макету приподнимать его со своего места, при заполнении поля. Перемещение плейсхолдера основывается на  добавлении ему по скрипту класса  "active". <br>Эти классы "valid" и  "active" задают стили инпуту по фокусу. При потере фокуса, эти классы удаляются через скрипт.
+
 							.p-20
 							+input('Ваше имя', 'Обязательно для заполнения', 'error')
-							
+							.p-10
+							p Инфо для программирования формы: добавление класса "error" тегу  'input' задает ему красный бордер и красный цвет текту ошибки под инпутом. Скрипт для  события submit  у формы  НЕ прописан, прописаны только стили для инпут с классом error  
+							.p-20
+							+input('Ваше имя', 'Обязательно для заполнения', 'disable', 'Текст в поле')
+							.p-10
+							p Класс "disable" для 'input' делает его пассивным. Что бы нельзя было писать в такой инпут текст, надо добавить инпуту атрибут "readonly" Если у такого инпута не пустой  value, то скрипт по загрузке страницы добавляет его fake-palceholder класс active  
+							.p-20
+							+input('Ваше имя', 'Обязательно для заполнения', 'disable', '')
+							.p-10
+							p Это инпут"disable" у которого нет value
 							pre.
 								+input('Описание поля', 'Дополнительная текстовая инфа')
 								.form-item
 									input.error(type="text" name="name" required)
 									span.fake-placeholder Описание поля
 									p Дополнительная текстовая инфа
-					
+		
+			script(src="../js/form.js")
