--- a/src/pug/ui/forms.pug
+++ b/src/pug/ui/forms.pug
@@ -54,27 +54,52 @@ html(lang="ru")
 					ul
 						li
 							
-							+input('Ваше имя', 'Обязательно для заполнения','')
+							+input('Ваше имя <b>&#42;</b>', 'Обязательно для заполнения','')
 							.p-10
 							p Если инпут в фокусе, скрипт добавляет ему класс "valid". Плэйсхолдер у инпута не дефолтный, а сделан через спан с классом fake-placeholder. Реализовано так, что бы по макету приподнимать его со своего места, при заполнении поля. Перемещение плейсхолдера основывается на  добавлении ему по скрипту класса  "active". <br>Эти классы "valid" и  "active" задают стили инпуту по фокусу. При потере фокуса, эти классы удаляются через скрипт.
-
-							.p-20
+							pre.
+								+input('Ваше имя <b>&#42;</b>', 'Обязательно для заполнения','')
+						li
 							+input('Ваше имя', 'Обязательно для заполнения', 'error')
 							.p-10
 							p Инфо для программирования формы: добавление класса "error" тегу  'input' задает ему красный бордер и красный цвет текту ошибки под инпутом. Скрипт для  события submit  у формы  НЕ прописан, прописаны только стили для инпут с классом error  
-							.p-20
+							pre.
+								+input('Ваше имя', 'Обязательно для заполнения', 'error')
+						li
 							+input('Ваше имя', 'Обязательно для заполнения', 'disable', 'Текст в поле')
 							.p-10
 							p Класс "disable" для 'input' делает его пассивным. Что бы нельзя было писать в такой инпут текст, надо добавить инпуту атрибут "readonly" Если у такого инпута не пустой  value, то скрипт по загрузке страницы добавляет его fake-palceholder класс active  
-							.p-20
+							pre.
+								+input('Ваше имя', 'Обязательно для заполнения', 'disable', 'Текст в поле')
+						li
 							+input('Ваше имя', 'Обязательно для заполнения', 'disable', '')
 							.p-10
 							p Это инпут"disable" у которого нет value
 							pre.
-								+input('Описание поля', 'Дополнительная текстовая инфа')
+								+input('Ваше имя', 'Обязательно для заполнения', 'disable', '')
 								.form-item
 									input.error(type="text" name="name" required)
 									span.fake-placeholder Описание поля
 									p Дополнительная текстовая инфа
-		
+						li
+							+input-light
+							pre.
+								+input-light
+
+						li
+							+switch('ОКВЭД')
+							pre.
+								+switch('ОКВЭД')
+						li
+							.form-checkbox
+								label
+									input(type="checkbox" name="")
+									span.fake-checkbox
+						li
+							.form-radio
+								label
+									input(type="radio" name="")
+									span.fake-radio
+
+
 			script(src="../js/form.js")
