--- a/src/pug/ui/ui-navigation.pug
+++ b/src/pug/ui/ui-navigation.pug
@@ -36,7 +36,7 @@
 			h3 Секции
 			ul
 				li
-					a(href="#!") Секции
+					a(href="header-slider.html") Слайдер в шапке
 				li
 					a(href="#!") Секции
 				
