--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -54,5 +54,10 @@
 		
 	}
 }
+.body-3{
+	font-size: 18px;
+	font-weight: 600;
+	line-height: 1.4;
+}
 .link-medium{font-size: 14px;}
 .link-small{font-size: 12px;}
