--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,13 +2,29 @@
 @import "base/_base";
 @import "base/_typography.scss";
 @import "base/_icons.scss";
+//blocks
 @import "blocks/_form.scss";
 @import "blocks/_buttons.scss";
 @import "blocks/_pagination.scss";
 @import "blocks/_components.scss";
+//@import "blocks/";
+//@import "blocks/";
+//@import "blocks/";
+//@import "blocks/";
+//@import "blocks/";
+//@import "blocks/";
+//@import "blocks/";
+
+//sections
+@import "sections/_header-slider.scss";
+//@import "sections/";
+//@import "sections/";
+//@import "sections/";
+//@import "sections/";
+//@import "sections/";
+//@import "sections/";
 
 
-//blocks
  
   //ui
  @import "ui/_ui-navigation";
