--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -23,7 +23,7 @@ body {
 	color: $pr;
 	font-family: $reg;
 	font-size: 16px;
-	line-height: 130%;
+	line-height: 1.3;
 	-webkit-font-smoothing: antialiased;
 	@media (max-width: 767px) {
 	  line-height: 1.4;
@@ -90,13 +90,14 @@ input[type="submit"] {
 	-webkit-appearance: none;
 }
 
-.flx-inline, .flx-block{
+ .fl-block,.fly-center,.fly-center, .fl-center{
 	display: flex;
-	align-items: center;
+	
 }
-.flx-center{
+.flx-center,.fl-center{
 	justify-content: center;
 }
-.flx-inline{
-	display: inline-flex;
+.fly-center,.fl-center{
+	align-items: center;
 }
+.mb-30{margin-bottom: 30px;}
