--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,8 +6,8 @@ block content
 		.start-page__cards
 			a(href="../ui/peremen.html") UI-KIT PAGE
 			
-			a(href="about.html")
-				span О нас
+			a(href="main.html")
+				span Главная
 				
 			a(href="#!")
 				span Отдельная страница
