--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -2,11 +2,28 @@
 	.header-slider__decore
 		img(src="./img/header-decore.svg", alt="img")
 	.header-slider.owl-carousel
-		.header-slider__item
-			img(src="./img/header-bg1.webp", alt="img")
-		.header-slider__item
-			img(src="./img/header-bg1.webp", alt="img")
-		.header-slider__item
-			img(src="./img/header-bg1.webp", alt="img")
-		.header-slider__item
-			img(src="./img/header-bg1.webp", alt="img")
+		.header-slider__item(style="background-image: url(./img/header-bg11.webp)")
+			.gradient-box.mb-30
+				.h1 Инвестиционный портал <br> РСО-Алания
+			
+		.header-slider__item(style="background-image: url(./img/header-bg1.webp)")
+			.gradient-block
+				.gradient-box.mb-30
+					.h2 Поддержка инвестиционной деятельности в регионе
+			
+				.gradient-block__group
+					.gradient-box.gradient-box--special
+						.gradient-box__content.fly-center
+							.gradient-box__icon.fl-center
+								img(src="../img/icons/target.svg", width="56" height="56" alt="alt")
+
+							.body-3 Корпорация развития - «одно окно» для инвесторов
+					+header-slider('target', 'Более 600 площадок для размещения производства')
+				
+					+header-slider('target', '4 территории с преференциальным режимом — ОЭЗ, ТОР')
+					+header-slider('target', 'Прогрессивная инвестиционная законодательная база')
+
+		.header-slider__item(style="background-image: url(./img/header-bg11.webp)")
+			
+		.header-slider__item(style="background-image: url(./img/header-bg1.webp)")
+			
