--- a/src/scss/sections/_header-slider.scss
+++ b/src/scss/sections/_header-slider.scss
@@ -71,7 +71,7 @@
 		top: auto;
 		bottom: 0;
 	}
-	.header-slider__decore{
+	.header-slider__decor{
 		position: absolute;
 		bottom: 0;
 		left: 0;
@@ -91,6 +91,19 @@
 		display: flex;
 		padding-left: 60px;
 		align-items: center;
+		position: relative;
+		&:before{
+			content:'';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			width: 50%;
+			height: 25%;
+			background-image: url('../img/header-decor.svg');
+			background-size: contain;
+			background-position: left top;
+			background-repeat: no-repeat;
+		}
 	}
 }
 
