--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -101,3 +101,8 @@ input[type="submit"] {
 	align-items: center;
 }
 .mb-30{margin-bottom: 30px;}
+.page-grid{
+	padding-left: 449px;
+	position: relative;
+	
+}
