--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -22,6 +22,14 @@ svg{transition: .3s;}
    height: 13px;
    fill: $sec;
    cursor:pointer;
-   
-
+}
+.svg-down{
+	width: 14px;
+	height: 8px;
+	fill: $sec;
+}
+.svg-user {
+	width: 18px;
+	height: 18px;
+	fill: $sec;
 }
