--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@
 
 //sections
 @import "sections/_header-slider.scss";
+@import "sections/_main-menu.scss";
 //@import "sections/";
 //@import "sections/";
 //@import "sections/";
