--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -1,7 +1,9 @@
 extends ../layouts/layout.pug
 
 block content
-	include ../sections/_header.pug
+	.page-grid
+		include ../sections/_main-menu
+		include ../sections/_header.pug
 	
 block variables
 	-var title = "Главная";
