--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -1,10 +1,10 @@
 .header-slider-wrapper
 	.header-slider.owl-carousel
-		.header-slider__item(style="background-image: url(./img/header-bg11.webp)")
+		.header-slider__item.fly-center(style="background-image: url(./img/header-bg11.webp)")
 			.gradient-box.mb-30
 				.h1 Инвестиционный портал <br> РСО-Алания
 			
-		.header-slider__item(style="background-image: url(./img/header-bg1.webp)")
+		.header-slider__item.fly-center(style="background-image: url(./img/header-bg1.webp)")
 			.gradient-block
 				.gradient-box.mb-30
 					.h2 Поддержка инвестиционной деятельности в регионе
