--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -33,3 +33,39 @@ svg{transition: .3s;}
 	height: 18px;
 	fill: $sec;
 }
+.svg-search{
+	width: 15px;
+	height: 16px;
+	fill:#5162FF;
+}
+.social-group, .lang-group{
+	
+	column-gap:10px;
+}
+.social-group__item, .lang-group__item {
+	width: 44px;
+	height: 44px;
+	border-radius: 50%;
+	flex-shrink: 0;
+	background-color: $ac1;
+	transition: .5s;
+	&:hover{
+		background-color: $sec;
+	}
+}
+.lang-group__item{
+	border: 1px solid $sec1;
+	background-color: #fff;
+	color:$sec1;
+	font-weight: 700;
+	font-size: 14px;
+	&:hover{
+		background-color: #fff;
+		border: 1px solid $ac1;
+		color: $ac1;
+	}
+	&.active{
+		border: 1px solid $ac1 ;
+		color: $ac1;
+	}
+}
