--- a/src/scss/blocks/_form.scss
+++ b/src/scss/blocks/_form.scss
@@ -214,4 +214,18 @@ input.valid, input:focus{border: 1px solid $sec1;}
     display: block;
   }
 }
-
+.search-form {
+  .form-input{padding-right: 50px;}
+  .flx-center{
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 5px;
+    right: 0;
+    transition: .5s;
+    &:hover svg{
+      transform: scale(1.35);
+    }
+    
+  }
+}
