--- a/src/scss/sections/_main-menu.scss
+++ b/src/scss/sections/_main-menu.scss
@@ -1,12 +1,18 @@
-.main-menu{
+.sidebar{
+	padding-bottom: 40px;
+	background-color: #fff;
+	height: 100vh;
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 449px;
+}
+.main-menu{
+	
 	background-color: #fff;
 	font-size: 16px;
 	line-height: 1.4;
-	height: 100vh;
+	height: calc(100vh - 40px);
 	overflow-y: auto;
 	&::-webkit-scrollbar{
 		display: block;
@@ -80,7 +86,7 @@
 .main-menu-item.open .main-menu__sub{display: block;}
 
 .main-menu-footer{
-	padding: 40px 30px;
+	padding: 40px 30px 0;
 }
 .call-center{
 	margin-top: 30px;
