--- a/src/pug/sections/_main-menu.pug
+++ b/src/pug/sections/_main-menu.pug
@@ -1,6 +1,6 @@
 //====menu-sidebar ======
 .sidebar
-	.main-menu
+	.main-menu.fl-column
 		.main-menu-logo.fly-center
 			a(href="index.html").logo.fly-center
 				img(src="./img/logo.webp", width="75" height="75" alt="logo")
