--- a/src/scss/sections/_main-menu.scss
+++ b/src/scss/sections/_main-menu.scss
@@ -32,8 +32,10 @@
 	padding: 20px 30px;
 	background-color:  $sec4;
 	border-bottom: 1px solid $sec2;
+	width: 100%;
 	
 }
+.main-menu-list{width: 100%;}
 .logo{
 	column-gap: 20px;
 	color: $sec;
@@ -87,6 +89,8 @@
 
 .main-menu-footer{
 	padding: 40px 30px 0;
+	
+	margin-top: auto;
 }
 .call-center{
 	margin-top: 30px;
