--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -42,6 +42,18 @@ svg{transition: .3s;}
 	
 	column-gap:10px;
 }
+.lang-group{
+	@media (max-width: 1199px) {
+	  position: absolute;
+	  left: 0;
+	  top: 0;
+	  padding: 10px 20px;
+	  background-color: #fff;
+	  z-index: 2;
+	  border-bottom: 1px solid $sec2;
+	  width: 100%;
+	}
+}
 .social-group__item, .lang-group__item {
 	width: 44px;
 	height: 44px;
